# MURF-FALCON-AI-VOICE-AGENT-CHALLENGE

./: .gitignore  BARISTA_AGENT.md  Day4_LinkedIn_Post.md  STARBUCKS_ENHANCEMENTS.md  docker-compose.yml  livekit_start.ps1
backend/: .env.example  test_imports.py  wellness_log.json
backend/src/: agent.py  agent_day3_wellness_backup.py  agent_multivoice.py
challenges/: Day 2 Task.md  Day 5 LinkedIn Post.md  Day 6 Task.md
day1-starter/: .env.example  day4_tutor_content.json
day1-starter/orders/: order_John_20251123T025431Z.json  order_LX_20251122T183946Z.json  order_Siddharth_20251123T032419Z.json  order_Siddharth_20251123T041850Z.json
day10-improv-battle/: README.md
day10-improv-battle/backend/: pyproject.toml  scenarios.json
day10-improv-battle/backend/src/: agent.py
day10-improv-battle/frontend/: package-lock.json  package.json
day2-barista/backend/: main.py
day3-wellness/: DAY3_LINKEDIN_POST.md  UI_IMPROVEMENTS.md
day3-wellness/frontend/: app-config.ts  prerender-manifest.json  trace
day5-sdr-agent/backend/: leads.json  phonepe_faq.json
day5-sdr-agent/frontend/: app-config.ts  pnpm-lock.yaml
day6-fraud-agent/: LINKEDIN_POST.md  README.md
day6-fraud-agent/backend/: fraud_cases.json
day6-fraud-agent/frontend/: app-config.ts  pnpm-lock.yaml
day7-multimodal-agent/backend/: .env  .env.example  grocery_catalog.json
day7-multimodal-agent/frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
days-8/: README.md
days-8/backend/: .env  install_gemini.bat  main.py  (+1 more)
frontend-day3/: package-lock.json
(+230 files in other folders)
